<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_us_text">关于我们</string>
    <string name="account_hint_text">请输入用户名</string>
    <string name="account_text">账 号：</string>
    <string name="action_settings">Settings</string>
    <string name="add">添加</string>
    <string name="address_text">所在地</string>
    <string name="after_auth">一般来说第三方登录时，第三方平台已经为您完成用户身份校验，您可以放心让用户登录。\n\n但如果您需要判断用户是否为新用户，可以在授权操作完成后，将用户的信息通过字段“HashMap userInfo”携带给login方法。客户端通过“String userId”执行登录请求，如果服务端判定此userId为未注册用户，可以将userInfo发送给注册接口，获取用户在此平台上的昵称、头像等数据，然后执行注册</string>
    <string name="after_update_text">以后再说</string>
    <string name="age_text">年龄</string>
    <string name="albums_text">相册</string>
    <string name="alter_age_text">修改年龄</string>
    <string name="alter_name_text">修改昵称</string>
    <string name="alter_pswd_text">修改密码</string>
    <string name="app_name">Lion Check</string>
    <string name="atte_text">Restlaufzeit unter Belastung:</string>
    <string name="attf_text">Restlaufzeit bis zur vollstandigen Ladung:</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出; \n 如微信登录，需要微信客户端</string>
    <string name="back">返回</string>
    <string name="back1">返回</string>
    <string name="camera_text">相机</string>
    <string name="cancel">取消</string>
    <string name="cancel_en">Nein</string>
    <string name="cancel_text">Cancel</string>
    <string name="change_connect_device_text">切换连接设备</string>
    <string name="choose_birthday">选择出生年月日</string>
    <string name="choose_day">日</string>
    <string name="choose_month">月</string>
    <string name="choose_year">年</string>
    <string name="city_text">国家/地区</string>
    <string name="clear_text">lear</string>
    <string name="code_hint_text">输入验证码</string>
    <string name="code_text">验 证 码</string>
    <string name="comfirm_text">Comfirm</string>
    <string name="commit">提交</string>
    <string name="company">Offgidtec GmbH</string>
    <string name="config_pswd_hint_text">再次输入密码</string>
    <string name="config_pswd_text">确认密码</string>
    <string name="confirm_text">Confirm</string>
    <string name="connect_fail_text">Disconnect</string>
    <string name="connected_text">Connected</string>
    <string name="connectting_text">Connected...</string>
    <string name="current_text">Strom(A)</string>
    <string name="currentmehr">Zeigt den aktuellen Lade-bzw. Entladestrom(A) der Batterie an.</string>
    <string name="cycle_text">Zyklus：</string>
    <string name="dcap_text">Design Kapazität</string>
    <string name="device_cell_text">Zelle</string>
    <string name="device_list_text">Alle verfügbare Geräte</string>
    <string name="device_name_text">Name</string>
    <string name="device_unit_text">Einheit</string>
    <string name="device_valtage_text">Spannung</string>
    <string name="direct_login_text">已注册,直接登录</string>
    <string name="disconnect_text">Bluetooth Unterbrechen</string>
    <string name="email_text">邮箱验证</string>
    <string name="energy_text">Energie:</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="failure_code_null">验证码不为空,请重新输入</string>
    <string name="failure_content_null">内容不能为空，请重新输入</string>
    <string name="failure_email_format">输入的邮箱格式错误,请重新输入</string>
    <string name="failure_emial_null">邮箱不能为空，请输入</string>
    <string name="failure_has_phone">手机号码已经存在</string>
    <string name="failure_login_pwd_null">登录密码错误,请重新输入</string>
    <string name="failure_new_phone_null">新手机号码不能为空,请重新输入</string>
    <string name="failure_phone_format">手机号码格式错误,请重新输入</string>
    <string name="failure_phone_null">手机号码不能为空,请重新输入</string>
    <string name="failure_psd_null">密码不能为空,请重新输入</string>
    <string name="failure_pwd_length">密码长度应为6–16位</string>
    <string name="failure_pwd_no_equal">密码不一致</string>
    <string name="failure_surepsd_null">确认密码不能为空,请重新输入</string>
    <string name="failure_username_error">用户名格式错误,必须为4-10位的非汉字字符</string>
    <string name="failure_username_null">用户名不能为空,请重新输入</string>
    <string name="failure_username_psd_null">用户名或密码不能为空,请重新输入</string>
    <string name="fcc_text">Gesamt Kapazität</string>
    <string name="feekback_context_text">反馈内容</string>
    <string name="feekback_hint_text">请输入反馈意见...</string>
    <string name="feekback_success_text">感谢您的宝贵意见，我们会尽快处理!</string>
    <string name="feekback_text">意见反馈</string>
    <string name="find_pwd_success_text">找回密码成功,请登录</string>
    <string name="finish">完成</string>
    <string name="get_code_text">获取验证码</string>
    <string name="head_text">头像</string>
    <string name="hello_world">Hello world!</string>
    <string name="historical_record_text">历史记录</string>
    <string name="home_text">智能按摩器</string>
    <string name="if_register_needed">如果您需要注册功能…</string>
    <string name="input_condition_text">Suche</string>
    <string name="input_email_text">输入邮箱</string>
    <string name="install_start_text">开始安装</string>
    <string name="kapazit_t_res_0x7f0d0080">Kapazität</string>
    <string name="lade">Lade- / Entladestrom</string>
    <string name="list_friends">%s的朋友</string>
    <string name="location">Panther-Batterien GmbH\nIn den Wiesen 2, 49451 Holdorf\nDetschland / Germany</string>
    <string name="login_hint_text">你还未登录，是否现在登录？</string>
    <string name="login_text">登  录</string>
    <string name="login_with_msg">用手机号码登录</string>
    <string name="login_with_other_plat">其他帐号登录</string>
    <string name="login_with_qzone">用QQ空间登录</string>
    <string name="login_with_sina_weibo">用新浪微博登录</string>
    <string name="login_with_weixin">用微信登录</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="logout">退出账号</string>
    <string name="logout_text">退出账号</string>
    <string name="manufacture_data_text">Herstellungsdatum:</string>
    <string name="mode_exit_text">Beim Schliessen der Apps wird die Bluetooth-Verbindung unterbrochen.Wollen Sie fortfahren?</string>
    <string name="my_msg_text">我的消息</string>
    <string name="my_text">我</string>
    <string name="name_hint_text">输入昵称</string>
    <string name="name_text">姓名</string>
    <string name="net_conn_fail">连接服务器失败</string>
    <string name="new_isempty_text">新密码不能为空,请重新输入</string>
    <string name="new_pswd_text">新 密 码</string>
    <string name="new_remark_null">新备注不为空,请重新输入</string>
    <string name="new_sure_isempty_text">确认密码不能为空,请重新输入</string>
    <string name="next">下一步</string>
    <string name="no">否</string>
    <string name="note">注意事项</string>
    <string name="now_update_text">立即更新</string>
    <string name="null_content" />
    <string name="oks_cancel">取消</string>
    <string name="oks_finish">完成</string>
    <string name="oks_multi_share">图文分享</string>
    <string name="oks_pull_to_refresh">下拉刷新</string>
    <string name="oks_refreshing">刷新中…</string>
    <string name="oks_release_to_refresh">松开刷新</string>
    <string name="oks_select_a_friend">请选择一个朋友</string>
    <string name="oks_select_one_plat_at_least">请选择一个目标平台</string>
    <string name="oks_shake2share">摇晃手机！</string>
    <string name="oks_share">分享</string>
    <string name="oks_share_canceled">分享已取消</string>
    <string name="oks_share_completed">分享成功</string>
    <string name="oks_share_failed">分享失败</string>
    <string name="oks_share_to">分享到</string>
    <string name="oks_sharing">分享操作正在后台进行…</string>
    <string name="old_isempty_text">旧密码不能为空,请重新输入</string>
    <string name="old_pswd_text">旧 密 码</string>
    <string name="oldpswd_hint_text">请输入旧密码(长度为6-16位)</string>
    <string name="password_hint_text">请输入密码</string>
    <string name="password_text">密 码：</string>
    <string name="pause">暂停</string>
    <string name="phone_hint_text">输入手机号(仅支持中国大陆号码)</string>
    <string name="phone_text">手机号</string>
    <string name="proj_name">ShareSDK_TPL</string>
    <string name="pswd_hint_text">请输入密码(长度为6-16位)</string>
    <string name="pswd_text">密      码</string>
    <string name="register_account_text">注册账号</string>
    <string name="register_name_text">姓      名</string>
    <string name="register_success_text">注册成功</string>
    <string name="register_text">注册</string>
    <string name="return_activity_del_text">当前活动已被删除</string>
    <string name="return_code_text">验证码错误</string>
    <string name="return_dimission">用户已经离职</string>
    <string name="return_eaasy_del_text">当前随笔已被删除</string>
    <string name="return_exist_text">用户已存在</string>
    <string name="return_fail_text">操作失败</string>
    <string name="return_know_error">未知错误,返回值为：</string>
    <string name="return_login_past_Text">您的账号在别处登录，请确认!</string>
    <string name="return_not_exist_text">用户不存在</string>
    <string name="return_pswd_error_error">用户名或者密码错误</string>
    <string name="return_pswd_error_text">旧密码错误</string>
    <string name="return_re_sign_in">不能重复打卡！</string>
    <string name="return_success_text">操作成功</string>
    <string name="return_wine_del_text">当前酒文化已被删除</string>
    <string name="return_wine_model_del_text">当前酒款已被删除</string>
    <string name="rmc_text">Rest Kapazität</string>
    <string name="sava_img_text">保存图片</string>
    <string name="save">保存</string>
    <string name="serial_number_text">Seriennummer:</string>
    <string name="socb">Zum Anmeldebildschirm</string>
    <string name="temp_text">Temperatur</string>
</resources>