<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/DIMEN_30PX"
        android:layout_marginRight="30dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/lioncheck_icon"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="@dimen/DIMEN_30PX"
        android:layout_marginRight="30dp"
        android:weightSum="2">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/text_size28"
                    android:textColor="@color/while_color"
                    android:id="@+id/tv_f"
                    android:layout_marginRight="@dimen/DIMEN_20PX"
                    android:text="0.0℉"
                    style="@style/tv_type_title_style"/>
                <TextView
                    android:textSize="@dimen/text_size28"
                    android:textColor="@color/while_color"
                    android:id="@+id/tv_temperature"
                    android:layout_marginLeft="@dimen/DIMEN_20PX"
                    android:text="0.0℃"
                    style="@style/tv_type_title_style"/>
            </LinearLayout>
            <com.gddai.lioncheck.widget.TempView
                android:layout_gravity="center"
                android:id="@+id/temp_view"
                android:background="#0000"
                android:layout_width="@dimen/DIMEN_200PX"
                android:layout_height="@dimen/DIMEN_280PX"
                android:layout_marginTop="@dimen/DIMEN_20PX"
                android:layout_marginBottom="@dimen/DIMEN_10PX"/>
            <TextView
                android:textSize="@dimen/text_size32"
                android:textColor="@color/while_color"
                android:layout_gravity="center"
                android:id="@+id/tv_temp"
                android:text="@string/temp_text"
                style="@style/tv_type_title_style"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:textSize="@dimen/text_size28"
                android:textColor="@color/while_color"
                android:layout_gravity="center"
                android:id="@+id/tv_rmc"
                android:text="0AH"
                style="@style/tv_type_title_style"/>
            <com.gddai.lioncheck.widget.RmcView
                android:layout_gravity="center"
                android:id="@+id/rmc_view"
                android:layout_width="@dimen/DIMEN_140PX"
                android:layout_height="@dimen/DIMEN_280PX"
                android:layout_marginTop="@dimen/DIMEN_20PX"
                android:layout_marginBottom="@dimen/DIMEN_10PX"/>
            <TextView
                android:textSize="@dimen/text_size32"
                android:textColor="@color/while_color"
                android:layout_gravity="center"
                android:text="@string/rmc_text"
                style="@style/tv_type_title_style"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <LinearLayout
            android:orientation="vertical"
            android:background="@mipmap/dacp"
            android:layout_width="@dimen/DIMEN_180PX"
            android:layout_height="@dimen/DIMEN_180PX"
            android:weightSum="1">
            <TextView
                android:textSize="@dimen/text_size24"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/DIMEN_10PX"
                android:paddingRight="@dimen/DIMEN_10PX"
                android:text="@string/dcap_text"
                android:layout_weight="0.5"
                style="@style/tv_type_title_style"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
                <TextView
                    android:textSize="@dimen/text_size28"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:id="@+id/tv_dcap"
                    android:paddingTop="@dimen/DIMEN_10PX"
                    android:text="0"
                    style="@style/tv_type_value_style"/>
                <TextView
                    android:textSize="@dimen/text_size20"
                    android:textColor="@color/btn_green_sel_color"
                    android:layout_gravity="center"
                    android:text="AH"
                    style="@style/tv_type_title_style"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <LinearLayout
            android:orientation="vertical"
            android:background="@mipmap/dacp"
            android:layout_width="@dimen/DIMEN_180PX"
            android:layout_height="@dimen/DIMEN_180PX"
            android:weightSum="1">
            <TextView
                android:textSize="@dimen/text_size24"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/DIMEN_10PX"
                android:paddingRight="@dimen/DIMEN_10PX"
                android:text="@string/fcc_text"
                android:layout_weight="0.5"
                style="@style/tv_type_title_style"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
                <TextView
                    android:textSize="@dimen/text_size28"
                    android:layout_gravity="center"
                    android:id="@+id/tv_fcc"
                    android:paddingTop="@dimen/DIMEN_10PX"
                    android:text="0"
                    style="@style/tv_type_value_style"/>
                <TextView
                    android:textSize="@dimen/text_size20"
                    android:textColor="@color/btn_green_sel_color"
                    android:layout_gravity="center"
                    android:text="AH"
                    style="@style/tv_type_title_style"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_240PX"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:weightSum="1">
        <View style="@style/ll_cut_style"/>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25">
            <TextView
                android:text="@string/atte_text"
                style="@style/tv_type_title_style"/>
            <TextView
                android:textColor="@color/btn_green_sel_color"
                android:gravity="right"
                android:id="@+id/tv_atte"
                android:layout_width="match_parent"
                android:text="0min"
                style="@style/tv_type_value_style"/>
        </LinearLayout>
        <View style="@style/ll_cut_style"/>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25">
            <TextView
                android:text="@string/attf_text"
                style="@style/tv_type_title_style"/>
            <TextView
                android:textColor="@color/btn_green_sel_color"
                android:gravity="right"
                android:id="@+id/tv_attf"
                android:layout_width="match_parent"
                android:text="0min"
                style="@style/tv_type_value_style"/>
        </LinearLayout>
        <View style="@style/ll_cut_style"/>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25">
            <TextView
                android:text="@string/serial_number_text"
                style="@style/tv_type_title_style"/>
            <TextView
                android:textColor="@color/btn_green_sel_color"
                android:gravity="right"
                android:id="@+id/tv_number"
                android:layout_width="match_parent"
                android:text="0"
                style="@style/tv_type_value_style"/>
        </LinearLayout>
        <View style="@style/ll_cut_style"/>
        <LinearLayout
            android:gravity="center_vertical"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25">
            <TextView
                android:text="@string/manufacture_data_text"
                style="@style/tv_type_title_style"/>
            <TextView
                android:textColor="@color/btn_green_sel_color"
                android:gravity="right"
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:text="01.01.1980"
                style="@style/tv_type_value_style"/>
        </LinearLayout>
        <View
            android:visibility="invisible"
            style="@style/ll_cut_style"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <TextView
        android:textSize="@dimen/text_size20"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/socInfoTv"
        android:background="@mipmap/long_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/DIMEN_150PX"
        android:text="@string/socb"/>
</LinearLayout>
